Fix alignment in Package Manager command tabs

--- a/src/Bootstrap/less/theme/page-display-package.less
+++ b/src/Bootstrap/less/theme/page-display-package.less
@@ -488,7 +488,8 @@
 
           .copy-button {
             display: flex;
-            
+            white-space: normal;
+
             button {
               display: flex;
               gap: 4px;
@@ -506,6 +507,7 @@
               color: var(--neutralForeground1Rest);
               justify-content: center;
               align-items: center;
+              align-content: center;
             }
           }
         }
